--- a/EducationSystem/ES.WebUI/Pages/Shared/_Layout.cshtml
+++ b/EducationSystem/ES.WebUI/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Role" asp-action="Index">Roles</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
